--- a/HTML & CSS/mygallery.html
+++ b/HTML & CSS/mygallery.html
@@ -6,10 +6,10 @@
     <!-- Navigation -->
     <div>
       <ul>
-        <li><a href="#home">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="contactme.html">Contact Me</a></li>
-        <li><a href="mygallery.html">My Gallery</a></li>
+        <li><a href="#mygallery">My Gallery</a></li>
       </ul>
     </div>
 
