--- a/HTML & CSS/aboutme.html
+++ b/HTML & CSS/aboutme.html
@@ -6,8 +6,8 @@
     <!-- Navigation -->
     <div>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="aboutme.html">About Me</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#aboutme">About Me</a></li>
         <li><a href="contactme.html">Contact Me</a></li>
         <li><a href="mygallery.html">My Gallery</a></li>
       </ul>
