--- a/HTML & CSS/contactme.html
+++ b/HTML & CSS/contactme.html
@@ -6,9 +6,9 @@
     <!-- Navigation -->
     <div>
       <ul>
-        <li><a href="#home">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
-        <li><a href="contactme.html">Contact Me</a></li>
+        <li><a href="#contactme">Contact Me</a></li>
         <li><a href="mygallery.html">My Gallery</a></li>
       </ul>
     </div>
