--- a/HTML&CSS/aboutme.html
+++ b/HTML&CSS/aboutme.html
@@ -7,7 +7,7 @@
     <div>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#aboutme">About Me</a></li>
+        <li class="active"><a href="#aboutme">About Me</a></li>
         <li><a href="contactme.html">Contact Me</a></li>
         <li><a href="mygallery.html">My Gallery</a></li>
       </ul>
