--- a/HTML&CSS/contactme.html
+++ b/HTML&CSS/contactme.html
@@ -8,7 +8,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
-        <li><a href="#contactme">Contact Me</a></li>
+        <li class="active"><a href="#contactme">Contact Me</a></li>
         <li><a href="mygallery.html">My Gallery</a></li>
       </ul>
     </div>
